# Exploring-VLAs

./: .gitignore  README.md
IsaacSim_USD/: .collect.mapping.json  drop_container.usd  green_2x3.usd  red_2x4.usd  yellow_2x2.usd
src/jointstatereader/jointstatereader/: joint_state_reader.py  soarm_tf2.py
vla_SO-101/: README.md
vla_SO-101/src/so_arm101_control/: setup.py
vla_SO-101/src/so_arm101_control/launch/: display.launch.py
vla_SO-101/src/so_arm101_control/scripts/: test_ik_solvers.py
vla_SO-101/src/so_arm101_control/so_arm101_control/: compute_workspace.py  control_gui.py  ee_pose_publisher.py
vla_SO-101/src/so_arm101_description/urdf/: so_arm101.urdf
vla_SO-101/src/so_arm101_moveit_config/: .setup_assistant  CMakeLists.txt
vla_SO-101/src/so_arm101_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit.rviz  ros2_controllers.yaml  so_arm101.ros2_control.xacro  so_arm101.srdf  so_arm101.urdf.xacro
vla_SO-101/src/so_arm101_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
vla_SO-ARM101/: README.md
vla_SO-ARM101/IsaacSim_USD/: red_2x2.usd
vla_SO-ARM101/docs/: AGENT_DEBUG_GUIDE.md
vla_SO-ARM101/src/jointstatereader/: setup.py
vla_SO-ARM101/src/so_arm101_control/: package.xml  setup.cfg  setup.py
vla_SO-ARM101/src/so_arm101_control/docs/: grasp_pipeline.md
vla_SO-ARM101/src/so_arm101_control/launch/: control.launch.py  gazebo.launch.py
vla_SO-ARM101/src/so_arm101_control/scripts/: test_ik_solvers.py
vla_SO-ARM101/src/so_arm101_control/so_arm101_control/: calibrate_ik.py  calibrate_jaw.py  camera_pose_publisher.py  compute_workspace.py  control_gui.py  ik_calibration.yaml  jaw_calibration.yaml  servo_driver.py  test_debug_services.py  test_ik_solvers.py  test_planning.py  workspace_bounds.yaml
vla_SO-ARM101/src/so_arm101_control/test/: test_copyright.py
vla_SO-ARM101/src/so_arm101_description/: CMakeLists.txt  package.xml
vla_SO-ARM101/src/so_arm101_description/config/: display.rviz
vla_SO-ARM101/src/so_arm101_description/launch/: display.launch.py
vla_SO-ARM101/src/so_arm101_description/meshes/: obj_3_SO-ARM101_camera_wrist_mount.stl
vla_SO-ARM101/src/so_arm101_description/urdf/: so_arm101.gazebo.urdf.xacro  so_arm101.gazebo.xacro  so_arm101.urdf
vla_SO-ARM101/src/so_arm101_description/worlds/: ground_plane.world
vla_SO-ARM101/src/so_arm101_moveit_config/: package.xml
vla_cartpole/: .gitignore  __init__.py  eval.py  requirements.txt  train.py  visualize.py
vla_cartpole/env/: __init__.py  cartpole_vision.py
vla_cartpole/evaluation/: __init__.py  evaluator.py
vla_cartpole/models/: __init__.py  vla.py
vla_cartpole/training/: __init__.py  reinforce.py
vla_cartpole/utils/: __init__.py  runtime.py  text.py  visualization.py
(+12 files in other folders)
