<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm101_control</name>
  <version>0.1.0</version>
  <description>
    Tkinter GUI + servo driver + EE pose publisher for SO-ARM101.
    Source: GUI adapted from RoboSort/JETANK_description/jetank_control_gui.py,
            driver adapted from Exploring-VLAs/vla_SO-101/jointstatereader,
            EE publisher adapted from RoboSort/JETANK_description/ee_pose_publisher.py.
  </description>
  <maintainer email="contact@lycheeai-hub.com">LycheeAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>so_arm101_description</exec_depend>
  <exec_depend>so_arm101_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
